; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw.c_rds_iw_ic_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw.c_rds_iw_ic_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.rds_info_iterator = type { i32 }
%struct.rds_info_lengths = type { i32 }

@rds_iw_conn_info_visitor = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socket*, i32, %struct.rds_info_iterator*, %struct.rds_info_lengths*)* @rds_iw_ic_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rds_iw_ic_info(%struct.socket* %0, i32 %1, %struct.rds_info_iterator* %2, %struct.rds_info_lengths* %3) #0 {
  %5 = alloca %struct.socket*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.rds_info_iterator*, align 8
  %8 = alloca %struct.rds_info_lengths*, align 8
  store %struct.socket* %0, %struct.socket** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.rds_info_iterator* %2, %struct.rds_info_iterator** %7, align 8
  store %struct.rds_info_lengths* %3, %struct.rds_info_lengths** %8, align 8
  %9 = load %struct.socket*, %struct.socket** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.rds_info_iterator*, %struct.rds_info_iterator** %7, align 8
  %12 = load %struct.rds_info_lengths*, %struct.rds_info_lengths** %8, align 8
  %13 = load i32, i32* @rds_iw_conn_info_visitor, align 4
  %14 = call i32 @rds_for_each_conn_info(%struct.socket* %9, i32 %10, %struct.rds_info_iterator* %11, %struct.rds_info_lengths* %12, i32 %13, i32 4)
  ret void
}

declare dso_local i32 @rds_for_each_conn_info(%struct.socket*, i32, %struct.rds_info_iterator*, %struct.rds_info_lengths*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
